--- a/3-3.ipynb
+++ b/3-3.ipynb
@@ -10,13 +10,74 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.2-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python38232bit6f72fa008a7f4f6fb7a0c1bf1c1fdf7c",
+   "display_name": "Python 3.8.2 32-bit"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\n1\n2\n3\n4\n"
+    }
+   ],
+   "source": [
+    "for i in [0,1,2,3,4,]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\n1\n2\n3\n4\n"
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4]\n",
+    "for i in my_list:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\n2\n4\n"
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4]\n",
+    "for i in my_list:\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
