6-1終わりました

--- a/6-1.ipynb
+++ b/6-1.ipynb
@@ -10,13 +10,196 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.2-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python38232bit6f72fa008a7f4f6fb7a0c1bf1c1fdf7c",
+   "display_name": "Python 3.8.2 32-bit"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "__main__.Car"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "my_car = Car()\n",
+    "type(my_car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    num_wheels = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "my_car = Car()\n",
+    "my_car.num_wheels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    weight = 4000\n",
+    "    num_wheels = 4\n",
+    "\n",
+    "    def calc_weight_per_wheel(self):\n",
+    "        return 1000.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1000.0"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "my_car = Car()\n",
+    "my_car.calc_weight_per_wheel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    weight = 4000\n",
+    "    num_wheels = 4\n",
+    "\n",
+    "    def calc_weight_per_wheel(self):\n",
+    "        return self.weight / self.num_wheels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1000.0"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "my_car = Car()\n",
+    "my_car.calc_weight_per_wheel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    weight = 4000\n",
+    "    num_wheels = 4\n",
+    "\n",
+    "    def __init__(self, car_name='NoName'):\n",
+    "        self.name = car_name\n",
+    "\n",
+    "    def calc_weight_per_wheel(self):\n",
+    "        return self.weight / self.num_wheels\n",
+    "default_car = Car()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'NoName'"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "default_car.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'DeLorean'"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "my_car = Car('DeLorean')\n",
+    "my_car.name"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
