--- a/7-4.ipynb
+++ b/7-4.ipynb
@@ -117,6 +117,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListInfo:\n",
+    "    def __init__(self, my_list):\n",
+    "        print('__init__')\n",
+    "        self.my_list = my_list\n",
+    "    \n",
+    "    def __enter__(self):\n",
+    "        print('__enter__')\n",
+    "        return self\n",
+    "    \n",
+    "    def nth(self, n):\n",
+    "        return self.my_list[n]\n",
+    "    \n",
+    "    def __exit__(self, exc_type, exc_value, traceback):\n",
+    "        print('__exit__')\n",
+    "        self.my_list.clear()\n",
+    "        print('    exc_type : ', exc_type)\n",
+    "        print('    exc_value : ', exc_value)\n",
+    "        print('    traceback : ', traceback)\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "__init__\n__enter__\nnth_inf: a\n__exit__\n    exc_type :  None\n    exc_value :  None\n    traceback :  None\n[]\n"
+    }
+   ],
+   "source": [
+    "my_list = ['a', 'b', 'c', 'd', 'e']\n",
+    "with ListInfo(my_list) as li:\n",
+    "    print('nth_inf:', li.nth(0))\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "__init__\n__enter__\n__exit__\n    exc_type :  <class 'IndexError'>\n    exc_value :  list index out of range\n    traceback :  <traceback object at 0x073159A8>\n[]\n"
+    }
+   ],
+   "source": [
+    "my_list = ['a', 'b', 'c', 'd', 'e']\n",
+    "with ListInfo(my_list) as li:\n",
+    "    print('nth_inf:', li.nth(10))\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
