--- a/8-4.ipynb
+++ b/8-4.ipynb
@@ -10,13 +10,200 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.2-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python38232bit6f72fa008a7f4f6fb7a0c1bf1c1fdf7c",
+   "display_name": "Python 3.8.2 32-bit"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "super_express = ['Npzpmi3','Nozomi64','Nozomi150','Hikari440','Hikari538','Kodama730']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[('Nozomi', 64),\n ('Nozomi', 150),\n ('Hikari', 440),\n ('Hikari', 538),\n ('Kodama', 730)]"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "def spliter(value, sp):\n",
+    "    res = value.split(sp)\n",
+    "    if len(res) == 2:\n",
+    "        return (sp, int(res[1]))\n",
+    "    return None\n",
+    "\n",
+    "result = []\n",
+    "for v in super_express:\n",
+    "    for s in ['Nozomi','Hikari','Kodama']:\n",
+    "        temp = spliter(v,s)\n",
+    "        if temp is not None:\n",
+    "            result.append(temp)\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[('Npzpmi', 3),\n ('Nozomi', 64),\n ('Nozomi', 150),\n ('Hikari', 440),\n ('Hikari', 538),\n ('Kodama', 730)]"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "result = []\n",
+    "for v in super_express:\n",
+    "    g = re.search(r'([a-zA-z]+)(\\d+)', v)\n",
+    "    result.append((g.group(1), int(g.group(2))))\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Npzpmi/3\nNozomi/64\nNozomi/150\nHikari/440\nHikari/538\nKodama/730\n"
+    }
+   ],
+   "source": [
+    "for v in super_express:\n",
+    "    g = re.search(r'([a-zA-z]+)(\\d+)', v)\n",
+    "    print(g.group(1), g.group(2), sep='/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Npzpmi/3\nNozomi6/4\nNozomi15/0\nHikari44/0\nHikari53/8\nKodama73/0\n"
+    }
+   ],
+   "source": [
+    "for v in super_express:\n",
+    "    g = re.search(r'(\\w+)(\\d+)', v)\n",
+    "    print(g.group(1), g.group(2), sep='/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Npzpmi/3\nNozomi/64\nNozomi/150\nHikari/440\nHikari/538\nKodama/730\n"
+    }
+   ],
+   "source": [
+    "for v in super_express:\n",
+    "    g = re.search(r'(\\D+)(\\d+)', v)\n",
+    "    print(g.group(1), g.group(2), sep='/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Npzpmi/3\nNozomi/64\nNozomi/150\nHikari/440\nHikari/538\nKodama/730\n"
+    }
+   ],
+   "source": [
+    "for v in super_express:\n",
+    "    g = re.search(r'([^0-9]+)(\\d+)', v)\n",
+    "    print(g.group(1), g.group(2), sep='/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "のぞみ/3\nのぞみ/64\nのぞみ/150\nひかり/440\nひかり/538\nこだま/730\n"
+    }
+   ],
+   "source": [
+    "super_express_jp = ['のぞみ3','のぞみ64','のぞみ150','ひかり440','ひかり538','こだま730']\n",
+    "\n",
+    "for v in super_express_jp:\n",
+    "    g = re.search(r'([^0-9]+)(\\d+)', v)\n",
+    "    print(g.group(1), g.group(2), sep='/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "のぞみ\nのぞみ\nのぞみ\nひかり\nひかり\nこだま\n"
+    }
+   ],
+   "source": [
+    "super_express_jp = ['のぞみ3','のぞみ64','のぞみ150','ひかり440','ひかり538','こだま730']\n",
+    "\n",
+    "for v in super_express_jp:\n",
+    "    g = re.search(r'([^0-9]+)', v)\n",
+    "    print(g.group(0))"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
