--- a/3-1.ipynb
+++ b/3-1.ipynb
@@ -112,6 +112,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "100\n"
+    }
+   ],
+   "source": [
+    "a= 100\n",
+    "if a >= 10:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1\n"
+    }
+   ],
+   "source": [
+    "a=0\n",
+    "if a == 0:\n",
+    "    a += 1\n",
+    "    a *= 2\n",
+    "    a -= 1\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
