3-2終わりました(修正後)

--- a/3-2.ipynb
+++ b/3-2.ipynb
@@ -182,6 +182,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "11\n"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "if a > 10:\n",
+    "    a /= 2\n",
+    "else:\n",
+    "    a += 1\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "12\n"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "if a >= 100:\n",
+    "    a *= 2\n",
+    "elif a >= 50:\n",
+    "    a /= 2\n",
+    "else:\n",
+    "    a += 2\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
