--- a/3-4.ipynb
+++ b/3-4.ipynb
@@ -169,6 +169,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1\n3\n5\n7\n9\n"
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i % 2 == 0:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "20\n"
+    }
+   ],
+   "source": [
+    "numbers = [1,1,2,3,5,8,13,21]\n",
+    "x = 0\n",
+    "for n in numbers:\n",
+    "    if n > 10:\n",
+    "        break\n",
+    "    x += n\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
