--- a/3-5.ipynb
+++ b/3-5.ipynb
@@ -66,7 +66,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 1\n",
+    "while a < 10:\n",
+    "    if a % 2 == 0:\n",
+    "        print(a)\n",
+    "    a += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 0\n",
+    "while a < 100:\n",
+    "    a += 2\n",
+    "print(a)"
+   ]
   }
  ]
 }
