3-8終わりました(修正後)

--- a/3-8.ipynb
+++ b/3-8.ipynb
@@ -187,6 +187,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pickle\n",
+    "while open('test.pkl','rb') as f:\n",
+    "    my_list = list(range(1,11))\n",
+    "    pickle.dump(my_list,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ]
